force-app/main/default/objects/sma__MAShift__c/sma__MAShift__c.object-meta.xml
<CustomObject>
    <label>MapAnything Shift</label>
    <nameField>
        <displayFormat>Shift-{0}</displayFormat>
        <label>MapAnything Shift Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>