force-app/main/default/objects/sma__MAShift__c/fields/sma__BreakStartHour__c.field-meta.xml
<CustomField>
    <fullName>sma__BreakStartHour__c</fullName>
    <label>Break Start Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>