force-app/main/default/objects/sma__MAShift__c/fields/sma__Date__c.field-meta.xml
<CustomField>
    <fullName>sma__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>