force-app/main/default/objects/sma__MAShift__c/fields/sma__EndAddress__c.field-meta.xml
<CustomField>
    <fullName>sma__EndAddress__c</fullName>
    <label>End Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>