force-app/main/default/objects/sma__MAShift__c/fields/sma__EndHour__c.field-meta.xml
<CustomField>
    <fullName>sma__EndHour__c</fullName>
    <label>End Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>