force-app/main/default/objects/sma__MAShift__c/fields/sma__EndMinute__c.field-meta.xml
<CustomField>
    <fullName>sma__EndMinute__c</fullName>
    <label>End Minute</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>