force-app/main/default/objects/sma__MAShift__c/fields/sma__StartLocation__c.field-meta.xml
<CustomField>
    <fullName>sma__StartLocation__c</fullName>
    <label>Start Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>